--- a/test.ipynb
+++ b/test.ipynb
@@ -58,7 +58,10 @@
     "        self.b2 = np.random.rand(1, self.h2_dim) - 0.5\n",
     "        self.w3 = np.random.rand(self.h2_dim, self.out_dim) - 0.5\n",
     "        self.b3 = np.random.rand(1, self.out_dim) - 0.5\n",
+    "        self.drop_gradients()\n",
     "\n",
+    "\n",
+    "    def drop_gradients(self):\n",
     "        self.dE_dw1 = np.zeros((self.input_dim, self.h1_dim))\n",
     "        self.dE_db1 = np.zeros((1, self.h1_dim))\n",
     "        self.dE_dw2 = np.zeros((self.h1_dim, self.h2_dim))\n",
@@ -101,12 +104,7 @@
     "        self.b2 -= self.learn_rate * self.dE_db2 / batch_size\n",
     "        self.b1 -= self.learn_rate * self.dE_db1 / batch_size\n",
     "\n",
-    "        self.dE_dw1 = np.zeros((self.input_dim, self.h1_dim))\n",
-    "        self.dE_db1 = np.zeros((1, self.h1_dim))\n",
-    "        self.dE_dw2 = np.zeros((self.h1_dim, self.h2_dim))\n",
-    "        self.dE_db2 = np.zeros((1, self.h2_dim))\n",
-    "        self.dE_dw3 = np.zeros((self.h2_dim, self.out_dim))\n",
-    "        self.dE_db3 = np.zeros((1, self.out_dim))\n",
+    "        self.drop_gradients()\n",
     "\n"
    ],
    "metadata": {
@@ -138,17 +136,50 @@
     "            prediction = np.argmax(model.run(data=X_test[i]/255, activation_function=relu))\n",
     "            if prediction == y_test[i]:\n",
     "                test_counter += 1\n",
-    "        print(f\"Epoch №{epoch} finished with accuracy {round(epoch_counter/60000 * 100, 2)}% Test dataset accuracy {round(test_counter/100, 2)}\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "        print(f\"Epoch №{epoch} finished with accuracy {round(epoch_counter/60000 * 100, 2)}% Test dataset accuracy {round(test_counter/100, 2)}\")\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "X_train, y_train = mnist_reader.load_mnist('data', kind='train')\n",
-    "X_test, y_test = mnist_reader.load_mnist('data', kind='t10k')\n",
-    "\n",
-    "\n",
+    "X_test, y_test = mnist_reader.load_mnist('data', kind='t10k')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "np.random.seed(0)\n",
-    "model = Perceptron(input_dim=784, h1_dim=56, h2_dim=28, out_dim=10)\n",
+    "model = Perceptron(input_dim=784, h1_dim=56, h2_dim=28, out_dim=10)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "train_model(model, X_train, y_train, X_test, y_test)"
    ],
    "metadata": {
@@ -163,26 +194,12 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "i = 2008\n",
+    "i = 1006\n",
     "right_answer = np.argmax(model.run(data=X_test[i]/255, activation_function=relu))\n",
     "fig = plt.figure\n",
     "plt.imshow(X_test[i].reshape(28,28), cmap='gray')\n",
     "plt.show()\n",
-    "right_answer, y_test[i]"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "train_model(model, X_train, y_train, X_test, y_test)"
+    "print(right_answer, y_test[i])"
    ],
    "metadata": {
     "collapsed": false,
